# tracey-application

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/common/: health.py  users.py
app/api/v1/routers/: shipments.py
app/api/v1/schemas/: schema_parcels.py
app/auth/: users.py
app/config/: base.py
app/db/: database.py  exceptions.py  models.py
app/schemas/: schema_tracey.py  schema_users.py
app/services/carrier/: base.py  bpost.py  dhl.py  exceptions.py
app/utils/: cache.py
scripts/: database_setup.sql
tests/: conftest.py
tests/api/common/: test_common_routers.py  test_user_routers.py
tests/api/v1/: test_bpost_shipments_routers.py  test_dhl_shipments_routers.py
tests/postgres/: test_db_handler.py
