[tool.poetry]
name = "tracey-application"
version = "0.1.0"
description = "An API to transform carriers shipment status into Tracey events"
authors = ["Tohid Savari <towhid.savari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
httpx = "^0.27.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.2"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
aiocache = "^0.12.2"
passlib = { version = "^1.7.4", extras=["bcrypt"] }
psycopg2-binary = "^2.9.9"
dnspython = "^2.6.1"
email-validator = "^2.1.1"
mypy = "^1.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
coverage = "^7.4.3"
pytest-asyncio = "^0.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = false
exclude = [".venv"]
